[package]
name = "guac"
version = "0.1.0"
edition = "2021"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
windows = { version = "0.46.0", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
